--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    background-color: rgb(18, 92, 165);
+    background-color: rgb(159, 165, 171);
 }
 
-
+section id depoimentos{
+color: rgb(85, 221, 80);
+}
